--- a/gym/templates/gym/join_gym.html
+++ b/gym/templates/gym/join_gym.html
@@ -22,7 +22,7 @@
         <label for="id_gym_code">Join Code:</label>
         <input type="text" name="code" maxlength="31" required id="id_gym_code">
 
-        <button type="submit">Join</button>
+        <button type="submit" class="submit-button">Join</button>
     </form>
 
     {% endif %}
