--- a/gym/templates/gym/remove_member.html
+++ b/gym/templates/gym/remove_member.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     <h1>Remove Knight</h1>
-    <p>Are you sure you want to remove Knight #{{ knight_name }} from your gym?</p>
+    <p>Are you sure you want to remove Knight {{ knight_name }} from your gym?</p>
 
     <div class="buttons">
         <!-- Yes Button (POST) -->
