--- a/dungeon/static/dungeon/view_dungeon.css
+++ b/dungeon/static/dungeon/view_dungeon.css
@@ -11,7 +11,7 @@
 
 .player_info_container {
     position: absolute;
-    bottom: 20%;
+    bottom: 2%;
     left: 1%;
     text-align: center;
     color: #ffdd57;
@@ -21,6 +21,15 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(255, 221, 87, 0.5);
     z-index: 3;
+    height: 80%;
+}
+
+.player_info_container h1 {
+    font-size: 20px;
+}
+
+.player_info_container h2 a{
+    font-size: 20px;
 }
 
 #health_bar {
@@ -67,7 +76,6 @@
     padding: 5px;
     background-color: rgba(35, 35, 35, 0.8);
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(57, 255, 20, 0.5);
     z-index: 3;
 }
 
