--- a/dungeon/static/dungeon/view_milestones.css
+++ b/dungeon/static/dungeon/view_milestones.css
@@ -1,11 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
 body {
-    background-color: #121212;
+    background-color: #181818;
     color: white;
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Rajdhani', sans-serif;
     text-align: center;
-    padding: 20px;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #121212;
+    width: 50%;
+    margin: 5vh auto;
+    border-radius: 50px;
+    box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.8);
 }
 
 h1 {
@@ -27,7 +38,7 @@ ul {
 }
 
 li {
-    background: #222;
+    background: #121212;
     padding: 20px;
     border-radius: 10px;
     margin: 15px 0;
@@ -40,24 +51,12 @@ h2 {
     text-shadow: 2px 2px 5px rgba(57, 255, 20, 0.8);
 }
 
-li:first-child {
-    background: #39FF14;
-    color: black;
-    box-shadow: 0 0 15px rgba(57, 255, 20, 1);
-    animation: pulse 1s infinite alternate;
-}
-
-@keyframes pulse {
-    0% { transform: scale(1); box-shadow: 0 0 10px rgba(57, 255, 20, 0.6); }
-    100% { transform: scale(1.02); box-shadow: 0 0 20px rgba(57, 255, 20, 1); }
-}
-
 h3 {
     color: #ffdd57;
     text-shadow: 2px 2px 5px rgba(255, 221, 87, 0.8);
 }
 
-a {
+.claimButton {
     display: inline-block;
     background: #ffdd57;
     color: black;
