--- a/exercises/static/exercises/edit_exercise.css
+++ b/exercises/static/exercises/edit_exercise.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
-
 body {
     background-color: #181818;
     color: white;
@@ -9,31 +7,41 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
-    padding-top: 15vh;
+    padding-top: 20vh;
 }
 
-.container {
-    background-color: #121212;
-    width: 60%;
-    max-width: 500px;
-    padding: 2rem;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.8);
-    text-align: center;
-}
-
-h1 {
-    color: #ffdd57;
-    font-size: 2rem;
-    text-shadow: 2px 2px 5px rgba(255, 221, 87, 0.8);
+.error-message {
+    color: #ff4d4d;
+    font-size: 1.2rem;
+    font-weight: bold;
     margin-bottom: 1rem;
+    text-shadow: 1px 1px 5px rgba(255, 77, 77, 0.8);
 }
 
-.complete-daily-form {
+.create-exercise-form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: .5vh;
+    width: 60%;
+    max-width: 600px;
+    margin: auto;
+    background-color: #121212;
+    padding: 2rem;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.8);
+}
+
+h1 {
+    font-size: 1.2rem;
+}
+
+h2 {
+    color: #ffdd57;
+    font-size: 1.2rem;
+    text-shadow: 2px 2px 5px rgba(255, 221, 87, 0.8);
+    margin-bottom: 1rem;
+    width: 100%;
 }
 
 label {
@@ -41,21 +49,29 @@ label {
     font-weight: bold;
     margin-top: 10px;
     display: block;
+    color: white;
+    text-align: left;
+    width: 90%;
 }
 
-input {
+input, textarea {
     background-color: #232323;
     color: white;
     font-size: 1rem;
     padding: 10px;
-    width: 80%;
+    width: 90%;
     border: 2px solid #ffdd57;
     border-radius: 5px;
     margin-top: 5px;
-    text-align: center;
+    text-align: left;
 }
 
-button.submit-button {
+textarea {
+    height: 120px;
+    resize: vertical;
+}
+
+button {
     background-color: #39FF14;
     color: black;
     font-size: 1.2rem;
@@ -67,10 +83,10 @@ button.submit-button {
     transition: background-color 0.3s, transform 0.2s;
     box-shadow: 0px 0px 10px rgba(57, 255, 20, 0.6);
     margin-top: 1rem;
-    width: 60%;
+    width: 100%;
 }
 
-button.submit-button:hover {
+button:hover {
     background-color: #28a828;
     transform: scale(1.1);
 }
