--- a/exercises/static/exercises/search_exercises.css
+++ b/exercises/static/exercises/search_exercises.css
@@ -16,7 +16,6 @@ h1 {
 }
 
 h2 {
-    color: #39FF14; 
     text-align: center;
     font-size: 1.5rem;
 }
@@ -93,11 +92,21 @@ ul li a:hover{
     justify-content: center;
 }
 
-
 .footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     position: fixed;
-    bottom: .1rem;
-    margin-left: .5rem;
+    bottom: 3%;
+    margin-left: 3%;
+    background-color: #121212;
+    padding: 0 2vw;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.8);
+}
+
+.footer h2 {
+    margin-right: 1vw;
 }
 
 .footer a {
@@ -116,7 +125,7 @@ ul li a:hover{
     align-items: center;
     justify-content: center;
     background-color: #121212;
-    box-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
+    box-shadow: 0px 0px 10px rgba(255, 221, 87, 0.8);
     height: 100%;
     width: 60%;
     margin-left: 20%;
