--- a/gym/static/gym/createGym.css
+++ b/gym/static/gym/createGym.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
 body {
-    background-color: #282828; 
+    background-color: #181818; 
     color: white; 
     font-family: "Rajdhani", sans-serif;
 }
@@ -17,12 +17,12 @@ h1 {
 }
 
 .create-gym-form {
-    background-color: #181818;
+    background-color: #121212;
     padding: 20px;
     max-width: 500px;
     margin: auto;
     border-radius: 10px;
-    box-shadow: 0px 0px 15px rgb(55, 255, 25);
+    box-shadow: 0px 0px 15px rgba(255, 221, 87, 0.3);
 }
 
 label {
@@ -32,11 +32,11 @@ label {
 }
 
 input, textarea {
-    background-color: #121212;
+    background-color: #282828;
     width: 100%;
     padding: 10px 0px;
     margin-top: 5px;
-    border: 1px solid #39FF14;
+    border: 1px solid #ffdd57;
     color: white;
     border-radius: 5px;
 }
