--- a/gym/static/gym/join_gym.css
+++ b/gym/static/gym/join_gym.css
@@ -31,6 +31,7 @@ h1 {
     background-color: rgba(87, 255, 87, 0.2);
     border: 1px solid #57ff57;
     color: #57ff57;
+    padding: 1vh 2vw;
 }
 
 .join-gym-form {
@@ -48,7 +49,7 @@ h1 {
 
 label {
     display: block;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     color: #ffdd57;
     margin-bottom: 5px;
 }
