Added Enemy Sprites
Added game sprites for Dungeon Enemies, and Profile Picture sprites, as well as a few slight HTML changes.

--- a/dungeon/templates/dungeon/view_milestones.html
+++ b/dungeon/templates/dungeon/view_milestones.html
@@ -36,55 +36,55 @@
                     <h2>Milestone {{milestone_id}}:</h2>
                         {% if noob != 0 %}
                         <p>
-                            {{noob_tasks}} of {{noob}} Noob Fit-Quests. <progress value="{{noob_tasks}}" max="{{noob}}"></progress>
+                            {{noob_tasks}} of {{noob}} Noob Fit-Quests <progress value="{{noob_tasks}}" max="{{noob}}"></progress>
                         </p>
                         {% endif %}
         
                         {% if easy != 0 %}
                         <p>
-                            {{easy_tasks}} of {{easy}} Easy Fit-Quests. <progress value="{{easy_tasks}}" max="{{easy}}"></progress>
+                            {{easy_tasks}} of {{easy}} Easy Fit-Quests <progress value="{{easy_tasks}}" max="{{easy}}"></progress>
                         </p>
                         {% endif %}
         
                         {% if medium != 0 %}
                         <p>
-                            {{medium_tasks}} of {{medium}} Medium Fit-Quests. <progress value="{{medium_tasks}}" max="{{medium}}"></progress>
+                            {{medium_tasks}} of {{medium}} Medium Fit-Quests <progress value="{{medium_tasks}}" max="{{medium}}"></progress>
                         </p>
                         {% endif %}
         
                         {% if hard != 0 %}
                         <p>
-                            {{hard_tasks}} of {{hard}} Hard Fit-Quests. <progress value="{{hard_tasks}}" max="{{hard}}"></progress>
+                            {{hard_tasks}} of {{hard}} Hard Fit-Quests <progress value="{{hard_tasks}}" max="{{hard}}"></progress>
                         </p>
                         {% endif %}
         
                         {% if expert != 0 %}
                         <p>
-                            {{expert_tasks}} of {{expert}} Expert Fit-Quests. <progress value="{{expert_tasks}}" max="{{expert}}"></progress>
+                            {{expert_tasks}} of {{expert}} Expert Fit-Quests <progress value="{{expert_tasks}}" max="{{expert}}"></progress>
                         </p>
                         {% endif %}
         
                         {% if walk != 0 %}
                         <p>
-                            {{total_walk}} of {{walk}} Minutes Walked. <progress value="{{total_walk}}" max="{{walk}}"></progress>
+                            {{total_walk}} of {{walk}} Minutes Walked <progress value="{{total_walk}}" max="{{walk}}"></progress>
                         </p>
                         {% endif %}
         
                         {% if water != 0 %}
                         <p>
-                            {{total_water}} of {{water}} L of Water Drank. <progress value="{{total_water}}" max="{{water}}"></progress>
+                            {{total_water}} of {{water}} L of Water Drank <progress value="{{total_water}}" max="{{water}}"></progress>
                         </p>
                         {% endif %}
         
                         {% if fruit_veg != 0 %}
                         <p>
-                            {{total_fruit_veg}} of {{fruit_veg}} Servings of Fruits and Vegetables Consumed. <progress value="{{total_fruit_veg}}" max="{{fruit_veg}}"></progress>
+                            {{total_fruit_veg}} of {{fruit_veg}} Servings of Fruits and Vegetables Consumed <progress value="{{total_fruit_veg}}" max="{{fruit_veg}}"></progress>
                         </p>
                         {% endif %}
         
                         {% if dungeons != 0 %}
                         <p>
-                            {{total_dungeons}} of {{dungeons}} Dungeons Explored. <progress value="{{total_dungeons}}" max="{{dungeons}}"></progress>
+                            {{total_dungeons}} of {{dungeons}} Dungeons Explored <progress value="{{total_dungeons}}" max="{{dungeons}}"></progress>
                         </p>
                         {% endif %}
                     
@@ -92,37 +92,37 @@
 
                         {% if action_points %}
                         <p>
-                            {{action_points}} Action Points.
+                            {{action_points}} Action Points
                         </p>
                         {% endif %}
         
                         {% if max_health %}
                         <p>
-                            +{{max_health}} Max Health.
+                            +{{max_health}} Max Health
                         </p>
                         {% endif %}
         
                         {% if sword_name %}
                         <p>
-                            {{sword_name}}: Rank {{sword_rank}}.
+                            {{sword_name}}: Rank {{sword_rank}}
                         </p>
                         {% endif %}
         
                         {% if boots_name %}
                         <p>
-                            {{boots_name}}: Rank {{boots_rank}}.
+                            {{boots_name}}: Rank {{boots_rank}}
                         </p>
                         {% endif %}
         
                         {% if staff_name %}
                         <p>
-                            {{staff_name}}: Rank {{staff_rank}}.
+                            {{staff_name}}: Rank {{staff_rank}}
                         </p>
                         {% endif %}
         
                         {% if armor_name %}
                         <p>
-                            {{armor_name}}: Rank {{armor_rank}}.
+                            {{armor_name}}: Rank {{armor_rank}}
                         </p>
                         {% endif %}
                     
@@ -141,55 +141,55 @@
                 <h2>Milestone {{milestone_id}}:</h2>
                     {% if noob != 0 %}
                     <p>
-                        {{noob_tasks}} of {{noob}} Noob Fit-Quests. <progress value="{{noob_tasks}}" max="{{noob}}"></progress>
+                        {{noob_tasks}} of {{noob}} Noob Fit-Quests <progress value="{{noob_tasks}}" max="{{noob}}"></progress>
                     </p>
                     {% endif %}
         
                     {% if easy != 0 %}
                     <p>
-                        {{easy_tasks}} of {{easy}} Easy Fit-Quests. <progress value="{{easy_tasks}}" max="{{easy}}"></progress>
+                        {{easy_tasks}} of {{easy}} Easy Fit-Quests <progress value="{{easy_tasks}}" max="{{easy}}"></progress>
                     </p>
                     {% endif %}
         
                     {% if medium != 0 %}
                     <p>
-                        {{medium_tasks}} of {{medium}} Medium Fit-Quests. <progress value="{{medium_tasks}}" max="{{medium}}"></progress>
+                        {{medium_tasks}} of {{medium}} Medium Fit-Quests <progress value="{{medium_tasks}}" max="{{medium}}"></progress>
                     </p>
                     {% endif %}
         
                     {% if hard != 0 %}
                     <p>
-                        {{hard_tasks}} of {{hard}} Hard Fit-Quests. <progress value="{{hard_tasks}}" max="{{hard}}"></progress>
+                        {{hard_tasks}} of {{hard}} Hard Fit-Quests <progress value="{{hard_tasks}}" max="{{hard}}"></progress>
                     </p>
                     {% endif %}
         
                     {% if expert != 0 %}
                     <p>
-                        {{expert_tasks}} of {{expert}} Expert Fit-Quests. <progress value="{{expert_tasks}}" max="{{expert}}"></progress>
+                        {{expert_tasks}} of {{expert}} Expert Fit-Quests <progress value="{{expert_tasks}}" max="{{expert}}"></progress>
                     </p>
                     {% endif %}
         
                     {% if walk != 0 %}
                     <p>
-                        {{total_walk}} of {{walk}} Minutes Walked. <progress value="{{total_walk}}" max="{{walk}}"></progress>
+                        {{total_walk}} of {{walk}} Minutes Walked <progress value="{{total_walk}}" max="{{walk}}"></progress>
                     </p>
                     {% endif %}
         
                     {% if water != 0 %}
                     <p>
-                        {{total_water}} of {{water}} L of Water Drank. <progress value="{{total_water}}" max="{{water}}"></progress>
+                        {{total_water}} of {{water}} L of Water Drank <progress value="{{total_water}}" max="{{water}}"></progress>
                     </p>
                     {% endif %}
         
                     {% if fruit_veg != 0 %}
                     <p>
-                        {{total_fruit_veg}} of {{fruit_veg}} Servings of Fruits and Vegetables Consumed. <progress value="{{total_fruit_veg}}" max="{{fruit_veg}}"></progress>
+                        {{total_fruit_veg}} of {{fruit_veg}} Servings of Fruits and Vegetables Consumed <progress value="{{total_fruit_veg}}" max="{{fruit_veg}}"></progress>
                     </p>
                     {% endif %}
         
                     {% if dungeons != 0 %}
                     <p>
-                        {{total_dungeons}} of {{dungeons}} Dungeons Explored. <progress value="{{total_dungeons}}" max="{{dungeons}}"></progress>
+                        {{total_dungeons}} of {{dungeons}} Dungeons Explored <progress value="{{total_dungeons}}" max="{{dungeons}}"></progress>
                     </p>
                     {% endif %}
                 
@@ -197,37 +197,37 @@
     
                     {% if action_points %}
                     <p>
-                        {{action_points}} Action Points.
+                        {{action_points}} Action Points
                     </p>
                     {% endif %}
         
                     {% if max_health %}
                     <p>
-                        +{{max_health}} Max Health.
+                        +{{max_health}} Max Health
                     </p>
                     {% endif %}
         
                     {% if sword_name %}
                     <p>
-                        {{sword_name}}: Rank {{sword_rank}}.
+                        {{sword_name}}: Rank {{sword_rank}}
                     </p>
                     {% endif %}
         
                     {% if boots_name %}
                     <p>
-                        {{boots_name}}: Rank {{boots_rank}}.
+                        {{boots_name}}: Rank {{boots_rank}}
                     </p>
                     {% endif %}
         
                     {% if staff_name %}
                     <p>
-                        {{staff_name}}: Rank {{staff_rank}}.
+                        {{staff_name}}: Rank {{staff_rank}}
                     </p>
                     {% endif %}
         
                     {% if armor_name %}
                     <p>
-                        {{armor_name}}: Rank {{armor_rank}}.
+                        {{armor_name}}: Rank {{armor_rank}}
                     </p>
                     {% endif %}
     
