--- a/fitness/static/fitness/header.css
+++ b/fitness/static/fitness/header.css
@@ -34,6 +34,10 @@ body {
     max-width: 100%;
 }
 
+.home_link_logo{
+    display: contents;
+}
+
 .logoDiv{
     display: flex;
     align-items: center;
