--- a/fitness/templates/fitness/view_current_tasks.html
+++ b/fitness/templates/fitness/view_current_tasks.html
@@ -17,7 +17,7 @@
     <p>Consumed {{fruit_veg}} servings of fruits and vegetables out of {{fruit_veg_goal}} servings.</p>
     <progress value="{{fruit_veg}}" max="{{fruit_veg_goal}}"></progress>
 
-    <p>
+    <p class="report_progress">
         <a href="{% url 'fitness:complete_daily' %}">
         Report Daily Quest Progress
         </a>
